fixed image (can it just be private? why fetch URL) and wrote a tiny bit more in about

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -39,7 +39,7 @@ params:
   profileMode:
     enabled: true
     subtitle: Software Engineer
-    imageUrl: "assets/pages/potrait.jpg"
+    imageUrl: "https://raw.githubusercontent.com/bmspates/bmspates/refs/heads/main/assets/pages/potrait.jpg"
     imageTitle: "Picture of Brian Spates"
     buttons:
       - name: About
